objects/Lighthouse_Worksheets__c.object
<CustomObject>
    <fields>
        <fullName>Disable_for_Patients_with__c</fullName>
        <label>Disable for Patients with:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Postcards__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default Setup (Disable for Customers with Both)</fullName>
                </value>
                <value>
                    <fullName>Default Setup (Disable for Customers with email)</fullName>
                </value>
                <value>
                    <fullName>Send to All</fullName>
                </value>
                <value>
                    <fullName>*Special (see notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_old_account_in_WebUI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable old account in WebUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_these_PC_s_if_applicable_AUTO__c</fullName>
        <label>Disable these PC's (if applicable)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 MIN</fullName>
                </value>
                <value>
                    <fullName>1 MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_these_PC_s_if_applicable__c</fullName>
        <label>Disable these PC's (if applicable)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coming Due</fullName>
                </value>
                <value>
                    <fullName>Recently Past Due</fullName>
                </value>
                <value>
                    <fullName>6 WK</fullName>
                </value>
                <value>
                    <fullName>3 MO</fullName>
                </value>
                <value>
                    <fullName>6 MO</fullName>
                </value>
                <value>
                    <fullName>1 YR</fullName>
                </value>
                <value>
                    <fullName>1 MO (Mileage Based)</fullName>
                </value>
                <value>
                    <fullName>3 MO (Time Based)</fullName>
                </value>
                <value>
                    <fullName>6 MO (Time Based)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Present__c</fullName>
        <label>Doctor/Business Owner Present</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>In and Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dr_Owner_Task_List__c</fullName>
        <label>Dr./Owner Task List Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ETL_Client_ID__c</fullName>
        <label>ETL Client ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eaglesoft_Sync_set_to_15m_b4_1hr_after__c</fullName>
        <label>Eaglesoft Sync set to 15m b4 &amp; 1hr after</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Not Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eaglesoft__c</fullName>
        <label>Eaglesoft Cell/Email</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Honor Both</fullName>
                </value>
                <value>
                    <fullName>Ignore Both</fullName>
                </value>
                <value>
                    <fullName>Honor Email</fullName>
                </value>
                <value>
                    <fullName>Honor Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earliest_Staff_In__c</fullName>
        <label>Earliest Staff In</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Easy_Dental_Details__c</fullName>
        <label>Easy Dental Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PMS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Verify Appt Confirmation Status</fullName>
                </value>
                <value>
                    <fullName>Verify Recall Descriptions</fullName>
                </value>
                <value>
                    <fullName>Discuss New Patients</fullName>
                </value>
                <value>
                    <fullName>Verify Appt Complete Status</fullName>
                </value>
                <value>
                    <fullName>Discuss Continuing Care</fullName>
                </value>
                <value>
                    <fullName>Verify PreMed Alerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Transports_set_to_NULL_for_all__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Transports &amp; set to NULL (for all)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_acct_remove_360ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit acct &amp; remove 360ID - NOT CLUB ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Friday__c</fullName>
        <label>Email - Friday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Monday__c</fullName>
        <label>Email - Monday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Saturday__c</fullName>
        <label>Email - Saturday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Schedule__c</fullName>
        <label>Email Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Emails__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Sunday__c</fullName>
        <label>Email - Sunday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Text_Notes__c</fullName>
        <label>Email Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Thursday__c</fullName>
        <label>Email - Thursday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Tuesday__c</fullName>
        <label>Email - Tuesday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Wednesday__c</fullName>
        <label>Email - Wednesday</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Email_Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_has_been_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email has been sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_to_Office__c</fullName>
        <inlineHelpText>Does the office want an email when we leave a message for the patient?</inlineHelpText>
        <label>Email to Office</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AutoCalls__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <label>Emails</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entered_Account_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entered Account Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entered_Account_Username__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entered Account Username</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_From_Log_File__c</fullName>
        <label>Error From Log File</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Bolt_On__c</fullName>
        <label>Escalated to Bolt On?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fake_Appointments__c</fullName>
        <label>Fake Appointments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fake_Columns__c</fullName>
        <label>Fake Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fake_Provider_IDs__c</fullName>
        <label>Fake Provider IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fast_Track_Picklist__c</fullName>
        <inlineHelpText>Please list the client's Fast Track status</inlineHelpText>
        <label>Fast Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Attempted - Needed to Call</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fast_Track_Reason_for_Calling__c</fullName>
        <label>Fast Track - Reason for Calling</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fast_Track_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Machine</fullName>
                </value>
                <value>
                    <fullName>Permissions</fullName>
                </value>
                <value>
                    <fullName>CSC Schedule</fullName>
                </value>
                <value>
                    <fullName>Multi-Location</fullName>
                </value>
                <value>
                    <fullName>Missed Session</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Additional Info Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <formula>IF(
 ISPICKVAL(Package_Addition__c , "Pro Pack"),
"Pro Pack consists of Lube Sticker Pro, Message Manager and Report Pro.  Lube Sticker Pro schedules clients’ appointments in advance.  Message Manager sends appointment reminders.  Report Pro is used to create customized invoices and reports.",

IF(
 ISPICKVAL(Package_Addition__c , "Welcome Station"),
"Welcome Station Kiosk is a check-in kiosk that allows a client to check in and input and review certain information about the client, the client’s vehicle and various available services.",

IF(
 ISPICKVAL(Package_Addition__c , "Pro Pack + Welcome Station"),
"Pro Pack consists of Lube Sticker Pro, Message Manager and Report Pro.  Lube Sticker Pro schedules clients’ appointments in advance.  Message Manager sends appointment reminders.  Report Pro is used to create customized invoices and reports.  The Welcome Station Kiosk is a check-in kiosk that allows a client to check in and input and review certain information about the client, the client’s vehicle and various available services.",

IF(
 ISPICKVAL(Package_Addition__c , "Mobile Manager"),
"Mobile Manager allows technicians to complete digital inspections on mobile devices and syncs with your Shop Management System.",
""
))))</formula>
        <label>Feature Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Settings__c</fullName>
        <label>Feedback Settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>No Feedback Now</fullName>
                </value>
                <value>
                    <fullName>*Other (see notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Transports__c</fullName>
        <label>Final Transports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IEE Finished</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>PC Amazing Mail</fullName>
                </value>
                <value>
                    <fullName>Letters (always turn on)</fullName>
                </value>
                <value>
                    <fullName>OBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Decline_Reason__c</fullName>
        <label>Follow Up Decline Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Change_Coming_Due_Days_Postcard__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Don’t Have Authorization</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Don’t See Value</fullName>
                </value>
                <value>
                    <fullName>Office Handles In-house</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_Denticon_XLDent_accts_change_hom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change homePhoneAsCellCandidate = true prior to first sync</description>
        <inlineHelpText>Change homePhoneAsCellCandidate = true prior to first sync</inlineHelpText>
        <label>For Denticon &amp; XLDent Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_the_360_Config_Tab_Click_on_Provi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Click on Prov Acct from 360 Config tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_Desk_Task_List__c</fullName>
        <label>Front Desk Task List Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GO_LIVE_Finish__c</fullName>
        <label>Message Activation Finish</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete MA Task/Update MA Notes</fullName>
                </value>
                <value>
                    <fullName>Set MA Date/Rep in Sugar</fullName>
                </value>
                <value>
                    <fullName>Send Messages Are Active Email to Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_email__c</fullName>
        <label>General email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Requested MA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Notes__c</fullName>
        <label>Message Activation Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <label>Message Activation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>On a specific date</fullName>
                </value>
                <value>
                    <fullName>Not Sure (see notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_of_AR__c</fullName>
        <label>Goal of AR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Re-CSC</fullName>
                </value>
                <value>
                    <fullName>CSC Light</fullName>
                </value>
                <value>
                    <fullName>Adversite Review</fullName>
                </value>
                <value>
                    <fullName>Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Recall fix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Needed_from_Bolt_On__c</fullName>
        <label>Hardware Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Package_Addition__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - From Bolt On</fullName>
                </value>
                <value>
                    <fullName>Yes - Using Shop Tablet</fullName>
                </value>
                <value>
                    <fullName>Yes - Discuss Hardware Options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IW_Complete_Date_Time__c</fullName>
        <label>IW Complete Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IW_QAed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IW QAed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Important_Account_Notes__c</fullName>
        <formula>Practice_Name__r.Important_Account_Notes__c</formula>
        <label>Important Account Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Backed_Out_Date__c</fullName>
        <label>Initial Backed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_CSC_AR_Date__c</fullName>
        <label>Initial CSC/AR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Event_Execution__c</fullName>
        <label>Initial Event Execution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run IEE (WATCH FOR STALE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Scheduled_CSC_Date__c</fullName>
        <label>Initial Scheduled CSC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Scheduled_Install_Date__c</fullName>
        <label>Initial Scheduled Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Stall_date__c</fullName>
        <label>Initial Stall Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_360_Basics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install 360 Basics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Basics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Basics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Difficulty__c</fullName>
        <label>Install Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic (10-20 mins)</fullName>
                </value>
                <value>
                    <fullName>Routine (15-30 mins)</fullName>
                </value>
                <value>
                    <fullName>Extensive (20-40 mins)</fullName>
                </value>
                <value>
                    <fullName>Complex (30-60 mins)</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Meeting_Notes__c</fullName>
        <label>Install Meeting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_On__c</fullName>
        <label>Install On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Workstation</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Remote Location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lighthouse_Worksheets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Install_Statistics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Statistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_With__c</fullName>
        <label>Install With</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installed_ProPack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed ProPack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installed_Welcome_Station__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed Welcome Station</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigate_Details__c</fullName>
        <label>Investigate Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Patient Changes</fullName>
                </value>
                <value>
                    <fullName>No Appt Changes</fullName>
                </value>
                <value>
                    <fullName>Not Completing Appts</fullName>
                </value>
                <value>
                    <fullName>Not Confirming Appts</fullName>
                </value>
                <value>
                    <fullName>No Sync End</fullName>
                </value>
                <value>
                    <fullName>No IEE</fullName>
                </value>
                <value>
                    <fullName>Performance Issues</fullName>
                </value>
                <value>
                    <fullName>Frequent OOS Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <label>Issue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LHDS_Folder__c</fullName>
        <label>LHDS Folder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH_Package__c</fullName>
        <formula>Practice_Name__r.Product_Type_Transactional__c</formula>
        <label>LH Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_Server_Name__c</fullName>
        <label>LH Server Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>